css: ensure text remains visible during webfont load (FOIT)

--- a/src/css/plain.css
+++ b/src/css/plain.css
@@ -12,6 +12,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 400;
+  font-display: swap;
   src: url('/bundle/fonts/open-sans-v15-latin-regular.eot'); /* IE9 Compat Modes */
   src: local('Open Sans Regular'), local('OpenSans-Regular'),
        url('/bundle/fonts/open-sans-v15-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
@@ -26,6 +27,7 @@
   font-family: 'Open Sans';
   font-style: italic;
   font-weight: 400;
+  font-display: swap;
   src: url('/bundle/fonts/open-sans-v15-latin-italic.eot'); /* IE9 Compat Modes */
   src: local('Open Sans Italic'), local('OpenSans-Italic'),
        url('/bundle/fonts/open-sans-v15-latin-italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
@@ -40,6 +42,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 600;
+  font-display: swap;
   src: url('/bundle/fonts/open-sans-v15-latin-600.eot'); /* IE9 Compat Modes */
   src: local('Open Sans SemiBold'), local('OpenSans-SemiBold'),
        url('/bundle/fonts/open-sans-v15-latin-600.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
@@ -54,6 +57,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 700;
+  font-display: swap;
   src: url('/bundle/fonts/open-sans-v15-latin-700.eot'); /* IE9 Compat Modes */
   src: local('Open Sans Bold'), local('OpenSans-Bold'),
        url('/bundle/fonts/open-sans-v15-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
@@ -69,6 +73,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 300;
+  font-display: swap;
   src: url('/bundle/fonts/open-sans-v17-latin-300.eot'); /* IE9 Compat Modes */
   src: local('Open Sans Light'), local('OpenSans-Light'),
        url('/bundle/fonts/open-sans-v17-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
@@ -83,6 +88,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
+  font-display: swap;
   src: url('/bundle/fonts/roboto-v18-latin-regular.eot'); /* IE9 Compat Modes */
   src: local('Roboto'), local('Roboto-Regular'),
        url('/bundle/fonts/roboto-v18-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
@@ -97,6 +103,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 500;
+  font-display: swap;
   src: url('/bundle/fonts/roboto-v18-latin-500.eot'); /* IE9 Compat Modes */
   src: local('Roboto Medium'), local('Roboto-Medium'),
        url('/bundle/fonts/roboto-v18-latin-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
@@ -111,6 +118,7 @@
   font-family: 'Ubuntu Mono';
   font-style: normal;
   font-weight: 400;
+  font-display: swap;
   src: url('/bundle/fonts/ubuntu-mono-v7-latin-regular.eot'); /* IE9 Compat Modes */
   src: local('Ubuntu Mono'), local('UbuntuMono-Regular'),
        url('/bundle/fonts/ubuntu-mono-v7-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
